kubernetes/istio/data-traffic-rule.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: external
  namespace: default
spec:
  host: "*.data.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
