kubernetes/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tanzu-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tanzu
spec:
  hosts:
    - "*"
  gateways:
    - tanzu-gateway
  http:
    - match:
        - uri:
            prefix: /accounts
      rewrite:
        uri: /
      route:
        - destination:
            host: account-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /payments
      rewrite:
        uri: /
      route:
        - destination:
            host: payment-service
            port:
              number: 80
